api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: value
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: value-api:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
