api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: value
spec:
  type: NodePort
  selector:
    app: api
  ports:
  - port: 8080
    nodePort: 31000
    name: traffic
