api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  labels:
    name: api
  namespace: value
  annotations:
    kubernetes.io/ingress.class:  nginx
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - pathType: Prefix
        path: "/value"
        backend:
          service:
            name: api
            port: 
              name: traffic
